--- a/web/css/style.css
+++ b/web/css/style.css
@@ -101,12 +101,12 @@
   more info: http://www.findmebyip.com/litmus/#css3-properties
 
 ------------------------------------------------------------- */
-div.header:before, div.header div.language:before {
+div.header:before, div.header div.language:before, .row:before {
   content: " ";
   display: block;
   clear: both; }
 
-div.header:after, div.header div.language:after {
+div.header:after, div.header div.language:after, .row:after {
   content: " ";
   display: block;
   clear: both; }
@@ -126,7 +126,7 @@ body {
   margin: 0;
   color: #000;
   background: #EFEFEE;
-  font: 300 14px / 1 "Open Sans", "Times New Roman", Times, serif;
+  font: 300 14px / 1.3 "Open Sans", "Times New Roman", Times, serif;
   min-width: 320px;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: none; }
@@ -152,7 +152,7 @@ h1, h2, h3 {
   font-size: 16px;
   font-weight: 600;
   margin: 0px;
-  padding: 0 0 10px; }
+  padding: 0px; }
 
 p {
   margin: 0;
@@ -251,9 +251,64 @@ div.page-container {
       font-size: 16px; }
 
 .row {
-  padding: 15px 15px 10px; }
+  padding: 20px 20px 20px; }
+  .row .connection-button,
+  .row .connection-logo {
+    padding: 0 10px 0 0; }
+    @media (min-width: 46.25em) {
+      .row .connection-button,
+      .row .connection-logo {
+        float: left;
+        width: 25%; } }
+  .row .connection-button {
+    text-align: left; }
+    @media (min-width: 46.25em) {
+      .row .connection-button {
+        text-align: center; } }
+  .row .logo-container {
+    max-width: 160px;
+    border: 1px solid #EFEFEE; }
+  .row .connection-description {
+    padding: 20px 0px;
+    font-size: 13px; }
+    @media (min-width: 46.25em) {
+      .row .connection-description {
+        float: left;
+        width: 50%;
+        padding: 0px; } }
+    .row .connection-description span.service {
+      font-weight: bold; }
+    .row .connection-description p {
+      padding: 0; }
 
 .border-top {
   border-top: 1px solid #EFEFEE; }
+
+.btn {
+  display: inline-block;
+  -webkit-border-radius: 6px;
+  -khtml-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+  line-height: 22px;
+  padding: 4px 30px 4px;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -khtml-transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out; }
+  .btn.connect {
+    background-color: #4db2cf; }
+  .btn.disconnect {
+    background-color: #a9a9a9; }
+  .btn:hover {
+    text-decoration: none;
+    background-color: #0069A1; }
 
 /*# sourceMappingURL=style.css.map */
