--- a/web/scss/_base.scss
+++ b/web/scss/_base.scss
@@ -1,9 +1,11 @@
 // brand colors (http://name-of-color.com/)
 $black: #000;
 $white: #fff;
-$gray:#707173;
-$blue:#4db2cf;
-$red:#e9292c;
+$gray: #707173;
+$lightgrey: #a9a9a9;
+$blue: #4db2cf;
+$darkblue: #0069A1;
+$red: #e9292c;
 
 
 // base variables
@@ -12,7 +14,7 @@ $base-background-color: #EFEFEE;
 $base-link-color: $blue;
 
 $base-font-size: 14px;
-$base-line-height: 1.0;
+$base-line-height: 1.3;
 $base-font-family: 'Open Sans', 'Times New Roman', Times, serif;
 $font-face-sans-serif: Arial, Helvetica, sans-serif;
 $base-text-interval: ($base-font-size * $base-line-height);
@@ -61,7 +63,7 @@ h1, h2, h3 {
   font-size: 16px;
   font-weight: 600;
   margin: 0px;
-  padding: 0 0 10px;
+  padding: 0px;
 }
 
 p {
