--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -39,7 +39,7 @@
                 <h1>My Connections</h1>
             </div>
             <div class="page-buttons">
-                <div class="logout"><a href="#">Logout</a></div>
+                <div class="logout"><a href="{{ url('logout') }}">Logout</a></div>
                 <div class="help"><a href="#">help</a></div>
                 <div class="language">
                     <div class="switch-toggle switch-candy">
@@ -50,7 +50,7 @@
                         <a></a>
                     </div>
                 </div>
-                <div class="loginname">Welcome, <a href="#">admin</a></div>
+                <div class="loginname">Welcome, <a href="#">{{ name }}</a></div>
             </div>
         </div>
         <nav>
@@ -62,6 +62,7 @@
     </header>
 </div>
 <div class="page-container">
+{%  block modal %}{% endblock %}
 {% block body %}{% endblock %}
 </div>
 </body>
