--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -5,7 +5,9 @@ $mq-breakpoints: (
         wide:    1300px
 );
 
-// Open Sans fonts
+// Libs
+@import "../node_modules/bourbon/app/assets/stylesheets/bourbon";
+
 @import "fonts/variables";
 @import "fonts/mixins";
 @import "fonts/Light";
@@ -27,6 +29,7 @@ $mq-breakpoints: (
 
 // Custom
 @import "base";
+@import "modal";
 
 nav {
   display: block;
