Code changes in order to get the UI fully working

--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -29,7 +29,7 @@
             </p>
         </div>
         <div class="connection-button">
-            <a class="btn connect" href="#">Connect</a>
+            <a class="btn connect" href="{{ url('orcid_authorize') }}">Connect</a>
         </div>
     </div>
     <div class="available-connections border-top row twitter">
