--- a/src/AppBundle/Resources/views/default/auth_error.html.twig
+++ b/src/AppBundle/Resources/views/default/auth_error.html.twig
@@ -8,7 +8,7 @@
             <p class="modal-content">
                 Unfortunately there was an authentication error. Please try again.
                 <br/>
-                <a href="{{  url('homepage') }}" class="btn connect">Home</a>
+                <a href="{{  url('index') }}" class="btn connect">Home</a>
             </p>
         </div>
     </div>
