* Cleanup * Refactoring * Finished the app flow.

--- a/src/AppBundle/Resources/views/default/login.html.twig
+++ b/src/AppBundle/Resources/views/default/login.html.twig
@@ -3,12 +3,12 @@
 {% block modal %}
 <div class="modal login-modal">
     <div class="modal-fade-screen">
-        <div class="modal-inner">
+        <div class="modal-inner" style="width: 50%;">
             <h1>Login</h1>
             <p class="modal-content">
-                First login to Open Conext in order to proceed.<br/>
+                Please login to Open-Conext in order to proceed.<br/>
                 <br/>
-                <a href="{{  url('saml_auth') }}" class="btn connect">Login</a>
+                <a href="{{  url('saml_auth') }}" class="btn connect">Login to Open-Conext</a>
             </p>
         </div>
     </div>
