--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -5,9 +5,10 @@
     <div class="content-title row">
         <h2>My Connections</h2>
     </div>
-    {% if connections %}
+    {% if connections|length > 0 %}
         {%  for connection in connections %}
-            <div class="connected-connections border-top row {{ connection.display_name }}">
+            {# @var connection \AppBundle\DTO\Connection #}
+            <div class="connected-connections border-top row {{ connection.machine_name }}">
                 <div class="connection-logo">
                     <div class="logo-container">
                         <img src="{{ connection.logo }}"/>
@@ -47,46 +48,27 @@
                 Services connected to OpenConext will be able to use your connections.</p>
         </div>
     {% endif %}
-    <div class="content-subtitle border-top row">
-        <h3>Available connections</h3>
-    </div>
-    <div class="available-connections border-top row orcid">
-        <div class="connection-logo">
-            <div class="logo-container">
-                <img src="/images/orcid.png"/>
+    {% if available_connections|length > 0 %}
+        <div class="content-subtitle border-top row">
+            <h3>Available connections</h3>
+        </div>
+        {% for service in available_connections %}
+            {# @var service \AppBundle\DTO\Connection #}
+            <div class="available-connections border-top row {{ service.machine_name }}">
+                <div class="connection-logo">
+                    <div class="logo-container">
+                        <img src="{{ service.logo }}"/>
+                    </div>
+                </div>
+                <div class="connection-description">
+                    <p>{{ service.description }}</p>
+                </div>
+                <div class="connection-button">
+                    <a class="btn connect" href="{{ url(service.route_connect) }}">Connect</a>
+                </div>
             </div>
-        </div>
-        <div class="connection-description">
-            <p>
-                <span class="service">ORCID</span> is a nonproprietary alphanumeric code to uniquely identify scientific
-                and other academic authors. This addresses the problem that a particular author's contributions to the
-                scientific literature or publications in the humanities can be hard to recognize as most personal names
-                are not unique, they can change (such as with marriage), have cultural differences in name order,
-                contain inconsistent use of first-name abbreviations and employ different writing systems.
-            </p>
-        </div>
-        <div class="connection-button">
-            <a class="btn connect" href="{{ url('orcid_authorize') }}">Connect</a>
-        </div>
-    </div>
-    <div class="available-connections border-top row twitter">
-        <div class="connection-logo">
-            <div class="logo-container">
-                <img src="/images/twitter.jpg"/>
-            </div>
-        </div>
-        <div class="connection-description">
-            <p>
-                <span class="service">Twitter</span> is an online social networking service that enables users to send and read short
-                140-character messages called "tweets". Registered users can read and post tweets, but unregistered
-                users can only read them. Users access Twitter through the website interface, SMS, or mobile device
-                app.
-            </p>
-        </div>
-        <div class="connection-button">
-            <a class="btn connect" href="#">Connect</a>
-        </div>
-    </div>
+        {% endfor %}
+    {% endif %}
     <div class="content-footer border-top row">
         <h3>Missing connections?</h3>
         <p><a href="#">Send us a request</a></p>
