--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -24,8 +24,11 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
     <link rel="stylesheet" href="/css/toggle-switch.css" type="text/css">
+    <script type="application/javascript" src="//code.jquery.com/jquery-git2.min.js"></script>
+    <script type="application/javascript" src="/js/app.main.js"></script>
     <title>My Connections</title>
 </head>
 <body>
