--- a/src/AppBundle/Resources/views/default/login.html.twig
+++ b/src/AppBundle/Resources/views/default/login.html.twig
@@ -5,7 +5,7 @@
     <div class="modal-fade-screen">
         <div class="modal-inner" style="width: 50%;">
             <h1>Login</h1>
-            <p class="modal-content">
+            <p class="modal-content centered">
                 Please login to Open-Conext in order to proceed.<br/>
                 <br/>
                 <a href="{{  url('saml_auth') }}" class="btn connect">Login to Open-Conext</a>
