--- a/web/css/style.css
+++ b/web/css/style.css
@@ -148,7 +148,7 @@ a {
   a:hover {
     text-decoration: underline; }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-size: 16px;
   font-weight: 600;
   margin: 0px;
@@ -203,7 +203,7 @@ p {
   -ms-transition: opacity 0.25s ease;
   -o-transition: opacity 0.25s ease;
   transition: opacity 0.25s ease;
-  background: #EFEFEE;
+  background-color: #fff;
   border-radius: 6px;
   margin-top: 0;
   margin: auto;
@@ -215,13 +215,14 @@ p {
   width: 95%; }
   .modal .modal-inner h1 {
     color: #333;
-    margin-bottom: 0 0 0.6em 0;
+    margin-bottom: 0.6em;
     text-align: left;
     text-transform: capitalize; }
   .modal .modal-inner p {
-    text-align: center;
     color: #333;
     line-height: 1.3; }
+    .modal .modal-inner p .btn.connect {
+      margin: 10px 0; }
   .modal .modal-inner .modal-intro {
     margin-bottom: 1em; }
   .modal .modal-inner .modal-content {
@@ -233,6 +234,19 @@ p {
     margin-top: 1em; }
     .modal .modal-inner a.cta:last-child {
       padding: 0 2em; }
+
+.modal .two-column .left-column {
+  width: 40%;
+  height: 100%;
+  float: left;
+  padding: 10px 30px; }
+
+.modal .two-column .right-column {
+  width: 60%;
+  height: 100%;
+  float: left;
+  padding: 10px 30px;
+  border-left: 1px solid #ddd; }
 
 .modal-open {
   overflow: hidden; }
@@ -329,6 +343,15 @@ div.page-container {
       font-weight: 600;
       font-size: 16px; }
 
+.green {
+  color: #04BB48; }
+
+.left {
+  text-align: left; }
+
+.centered {
+  text-align: center; }
+
 .row {
   padding: 20px 20px 20px; }
   .row .connection-button,
@@ -386,6 +409,9 @@ div.page-container {
     background-color: #4db2cf; }
   .btn.disconnect {
     background-color: #a9a9a9; }
+  .btn.disconnect:hover {
+    text-decoration: none;
+    background-color: #707173; }
   .btn:hover {
     text-decoration: none;
     background-color: #0069A1; }
@@ -409,5 +435,12 @@ div.page-container {
 
 .connected-connections .connection-status {
   color: #04BB48; }
+
+.openconext-login-checked {
+  display: block;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 5px 0;
+  margin: 15px 0; }
 
 /*# sourceMappingURL=style.css.map */
